# accelerate-rs

./: Cargo.toml  README.md  build.rs  wrapper.h
benches/: linalg.rs
