[package]
name = "accelerate-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.139"

[build-dependencies]
bindgen = "0.64.0"

[dev-dependencies]
criterion = "0.4.0"
pprof = { version = "0.11.0", features = ["criterion", "prost-codec", "flamegraph"] }

[[bench]]
name = "linalg"
harness = false
